@@ -191,7 +191,7 @@ $draftail-editor-font-family: $font-sans;
 }
 
 .Draftail-ComboBox__menu {
-  padding: 0 theme('spacing.4');
+  padding: theme('spacing.4');
 }
 
 .Draftail-ComboBox__optgroup-label {
@@ -206,10 +206,15 @@ $draftail-editor-font-family: $font-sans;
   border-width: 1px;
 }
 
+.Draftail-ComboBox__status {
+  padding-inline-start: theme('spacing.3');
+}
+
 .Draftail-ComboBox__option[aria-selected='true'] {
   color: theme('colors.secondary.DEFAULT');
   border-radius: theme('borderRadius.sm');
   background: transparent;
+  cursor: pointer;
 }
 
 .Draftail-ComboBox__option-icon {
