@@ -17,5 +17,10 @@ depth: 1
  * Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
  * Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
  * Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
+<<<<<<< HEAD
+ * Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
+||||||| 9c96daa28b
+=======
  * Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
  * Support text resizing in workflow steps cards (Ivy Jeptoo)
+>>>>>>> main
