@@ -53,6 +53,7 @@ depth: 1
  * Pass through expected expected `cc`, `bcc` and `reply_to` to the Django mail helper from `wagtail.admin.mail.send_mail` (Ben Gosney)
  * Allow reviewing or reverting to a Page's initial revision (Andy Chosak)
  * Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
+ * Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
 
 ### Documentation
 
