@@ -41,6 +41,7 @@ Changelog
  * Fix: Pass through expected expected `cc`, `bcc` and `reply_to` to the Django mail helper from `wagtail.admin.mail.send_mail` (Ben Gosney)
  * Fix: Allow reviewing or reverting to a Page's initial revision (Andy Chosak)
  * Fix: Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
+ * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
  * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
  * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
  * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
@@ -81,6 +82,7 @@ Changelog
  * Fix: Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
  * Fix: Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
  * Fix: Support text resizing in workflow steps cards (Ivy Jeptoo)
+ * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
 
 
 4.1.1 (11.11.2022)
